Added Youtube video link for describing devices

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -53,3 +53,11 @@
   /** Remove default browser outline style */
   outline: none;
 }
+
+.lightbox iframe {
+  /*height: 315px;*/
+  position: relative;
+  top: 15%;
+  /*transform:  translateY(-50%);*/
+}
+}
