--- a/css/style.css
+++ b/css/style.css
@@ -433,12 +433,12 @@ ul.side-bar li.title a{
   clear: both;
 }
 
-.thumb {
+.thumb1{
   position: relative;
   overflow: hidden;
 }
 
-.thumb .zoom{
+.thumb1 .zoom{
   background: url(../img/videoOverlay.png) no-repeat scroll 0 0 transparent;
   outline: medium none;
   position: absolute;
@@ -450,7 +450,19 @@ ul.side-bar li.title a{
   opacity: 1;
   
 }
-.thumb .zoom:hover{
+.thumb2{
+  position: relative;
+  overflow: hidden;
+}
+.thumb2 .zoom{
+  background: url(../img/videoOverlay.png) no-repeat scroll 0 0 transparent;
+  outline: medium none;
+  position: absolute;
+  z-index: 100;
+  width: 80px;
+  height: 80px;
+  top: 150px;
+  left:70px;
   opacity: 1;
   
 }
