--- a/css/vorto.css
+++ b/css/vorto.css
@@ -299,7 +299,7 @@ footer {
 }
 
 /*Home page Image-VideoOverlay*/
-.thumb1, .thumb2{
+.thumb1, .thumb2, .thumb3,.thumb4{
   position: relative;
 }
 
@@ -317,7 +317,7 @@ footer {
 
 }
 
-.thumb1 .play-icon:hover, .thumb2 .play-icon:hover{
+.thumb1 .play-icon:hover, .thumb2 .play-icon:hover, .thumb3 .play-icon:hover, .thumb4 .play-icon:hover{
 opacity: 1;
 -webkit-transform: scale(1.1);
         -ms-transform: scale(1.1);
@@ -336,6 +336,26 @@ opacity: 1;
     top: 125px;
 }
 
+.thumb3 .play-icon {
+    color: #003151;
+    font-size: 4em;
+    opacity: 0.5;
+    outline: medium none;
+    position: absolute;
+    left: 200px;
+    z-index: 100;
+    top: 115px;
+}
+.thumb4 .play-icon {
+    color: #003151;
+    font-size: 4em;
+    opacity: 0.5;
+    outline: medium none;
+    position: absolute;
+    left: 250px;
+    z-index: 100;
+    top: 125px;
+}
 /*community*/
 .team {
     background: -moz-linear-gradient(center top , rgba(255, 255, 255, 1) 0%, rgba(235, 235, 235, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
