--- a/css/vorto.css
+++ b/css/vorto.css
@@ -107,6 +107,7 @@ a:hover {
 
 .tagline {
     padding: 60px 0 50px;
+
 }
 
 .tagline h1 {
@@ -379,9 +380,9 @@ opacity: 1;
 }
 /*community*/
 .team {
-    background: -moz-linear-gradient(center top , rgba(255, 255, 255, 1) 0%, rgba(235, 235, 235, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
-    background: linear-gradient(center top , rgba(255, 255, 255, 1) 0%, rgba(235, 235, 235, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
-    background: -webkit-linear-gradient(top , rgba(255, 255, 255, 1) 0%, rgba(235, 235, 235, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    background: -moz-linear-gradient(center top , rgba(255, 255, 255, 1) 0%, rgba(176, 196, 222, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    background: linear-gradient(center top , rgba(255, 255, 255, 1) 0%, rgba(176, 196, 222, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    background: -webkit-linear-gradient(top , rgba(255, 255, 255, 1) 0%, rgba(176, 196, 222, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
     border-radius: 4px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 0 rgba(0, 0, 0, 0.1) inset;
     height: auto;
@@ -391,7 +392,9 @@ opacity: 1;
 }
 
 .team:hover {
-    background: -moz-linear-gradient(center top , rgba(235, 235, 235, 1) 0%, rgba(255, 255, 255, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    background: -moz-linear-gradient(center top , rgba(176, 196, 222, 1) 0%, rgba(255, 255, 255, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+	background: linear-gradient(center top , rgba(176, 196, 222, 1) 0%, rgba(255, 255, 255, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+	background: -webkit-linear-gradient(center top , rgba(176, 196, 222, 1) 0%, rgba(255, 255, 255, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
     border-radius: 4px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 0 rgba(0, 0, 0, 0.1) inset;
     border: 0px solid #3300CC;
@@ -572,3 +575,159 @@ footer ul {
 }
 
 .clear{ clear:both; height:0; overflow:hidden;}
+
+
+table {
+    background: #B0C4DE none repeat scroll 0 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin: 20px;
+    width: 100%;
+  
+}
+table th {
+    background: rgba(0, 0, 0, 0) -moz-linear-gradient(center top , #B0C4DE, #B0C4DE) repeat scroll 0 0;
+	background: rgba(0, 0, 0, 0) linear-gradient(center top , #B0C4DE, #B0C4DE) repeat scroll 0 0;
+    background: rgba(0, 0, 0, 0) -webkit-linear-gradient(center top , #B0C4DE, #B0C4DE) repeat scroll 0 0;
+    border-bottom: 1px solid #c0c0c0;
+    border-top: 1px solid #e0e0e0;
+    padding: 4px 6px;
+}
+table tr:first-child th:first-child {
+    border-top-left-radius: 3px;
+}
+table tr:first-child th:last-child {
+    border-top-right-radius: 3px;
+}
+table td:first-child {
+    border-left: 0 none;
+    text-align: left;
+}
+table td {
+  background: rgba(0, 0, 0, 0) -moz-linear-gradient(center top , #fbfbfb, #fafafa) repeat scroll 0 0;
+	background: rgba(0, 0, 0, 0) linear-gradient(center top , #fbfbfb, #fafafa) repeat scroll 0 0;
+	background: rgba(0, 0, 0, 0) -webkit-linear-gradient(center top , #fbfbfb, #fafafa) repeat scroll 0 0;
+  border-bottom: 1px solid #e0e0e0;
+  border-left: 1px solid #e0e0e0;
+  border-top: 1px solid #f0f0f0;
+  padding: 4px 6px;
+}
+table tr.even td {
+  background: rgba(0, 0, 0, 0) -moz-linear-gradient(center top , #f8f8f8, #f6f6f6) repeat scroll 0 0;
+	background: rgba(0, 0, 0, 0) linear-gradient(center top , #f8f8f8, #f6f6f6) repeat scroll 0 0;
+	background: rgba(0, 0, 0, 0) -webkit-linear-gradient(center top , #f8f8f8, #f6f6f6) repeat scroll 0 0;
+}
+table tr:last-child td {
+    border-bottom: 0 none;
+}
+table tr:last-child td:first-child {
+    border-bottom-left-radius: 3px;
+}
+table tr:last-child td:last-child {
+    border-bottom-right-radius: 3px;
+}
+table tr:hover td {
+  background: rgba(0, 0, 0, 0) -moz-linear-gradient(center top , #f2f2f2, #f0f0f0) repeat scroll 0 0;
+	background: rgba(0, 0, 0, 0) linear-gradient(center top , #f2f2f2, #f0f0f0) repeat scroll 0 0;
+	background: rgba(0, 0, 0, 0) -webkit-linear-gradient(center top , #f2f2f2, #f0f0f0) repeat scroll 0 0;
+}
+#zoo table {
+    margin: 0;
+}
+.pricing {
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    border-color: #d4d4d4;
+    border-image: none;
+    border-radius: 5px 5px 9px 9px;
+    border-style: solid;
+    border-width: 1px 1px 4px;
+    color: #c0c2c2;
+    font-family: "Lato",sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 40px;
+    width: 100%;
+}
+.pricing thead th {
+    background: #333 none repeat scroll 0 0;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    color: #f4f4f4;
+    float: left;
+    font-family: "Lato",sans-serif;
+    font-size: 24px;
+    padding: 13px 8%;
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
+}
+.pricing tfoot td {
+    background: #ededed none repeat scroll 0 0;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    padding: 20px 8%;
+    width: 100%;
+}
+.pricing td {
+    background: #fff none repeat scroll 0 0;
+    border: 1px solid #d4d4d4;
+    float: left;
+    padding: 10px 8%;
+    width: 100%;
+}
+.pricing tfoot td {
+    text-align: center;
+}
+.pricing td.focus {
+    background: #3a5a82; none repeat scroll 0 0;
+    border-bottom: 1px solid #d4d4d4;
+    color: #fff;
+    font-family: "Lato",sans-serif;
+    font-size: 32px;
+    font-weight: 400;
+    padding: 25px 8%;
+    text-align: center;
+    width: 100%;
+}
+.pricing td.focus-best {
+    background: #a00 none repeat scroll 0 0;
+    border-bottom: 1px solid #d4d4d4;
+    color: #fff;
+    font-family: "Lato",sans-serif;
+    font-size: 32px;
+    font-weight: 400;
+    padding: 25px 8%;
+    text-align: center;
+    width: 100%;
+}
+.pricing td.focus span {
+    display: block;
+    font-size: 10px;
+    margin-top: 5px;
+}
+.pricing td.focus-best span {
+    display: block;
+    font-size: 10px;
+}
+.pricing td h6 {
+    color: #c0c2c2;
+    float: left;
+    font-family: "Lato",sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    width: 60%;
+}
+.pricing td p {
+    float: left;
+    text-align: right;
+    width: 40%;
+}
+.btn-primary:hover {
+    box-shadow: 0 0 3px rgba(0, 0, 0, 1);
+}
+#tbltext{
+    color: #000000;
+}
